Web Inspector: Plumbing CSS warnings https://bugs.webkit.org/show_bug.cgi?id=111334

Patch by Sergey Ryazanov <serya@chromium.org> on 2013-03-20
Reviewed by Pavel Feldman.

Adding a framework for plumbing CSS warnings from CSSParser/grammar to the Inspector console.

* css/CSSParser.cpp:
(WebCore::CSSParser::CSSParser):
(WebCore::CSSParser::parseSheet):
(WebCore::CSSParser::syntaxError):
(WebCore):
(WebCore::CSSParser::isLoggingErrors):
(WebCore::CSSParser::logError):
* css/CSSParser.h:
(CSSParser):
(CSSParser::Location):
(WebCore):
* css/StyleSheetContents.cpp:
(WebCore::StyleSheetContents::parseAuthorStyleSheet):
(WebCore::StyleSheetContents::parseString):
(WebCore::StyleSheetContents::parseStringAtLine):
* css/StyleSheetContents.h:
(StyleSheetContents):
* dom/StyleElement.cpp:
(WebCore::StyleElement::createSheet):
* page/PageConsole.cpp:
(WebCore::PageConsole::addMessage):

Canonical link: https://commits.webkit.org/131143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146353 268f45cc-cd09-0410-ab3c-d52691b4dbfc