Source/WebCore/css/StyleSheetContents.h
@@ -62,7 +62,7 @@ public:
 
     void parseAuthorStyleSheet(const CachedCSSStyleSheet*, const SecurityOrigin*);
     bool parseString(const String&);
-    bool parseStringAtLine(const String&, int startLineNumber);
+    bool parseStringAtLine(const String&, int startLineNumber, bool);
 
     bool isCacheable() const;
 
