Source/WebCore/dom/StyleElement.cpp
@@ -175,7 +175,7 @@ void StyleElement::createSheet(Element* e, WTF::OrdinalNumber startLineNumber, c
             m_sheet = CSSStyleSheet::createInline(e, KURL(), document->inputEncoding());
             m_sheet->setMediaQueries(mediaQueries.release());
             m_sheet->setTitle(e->title());
-            m_sheet->contents()->parseStringAtLine(text, startLineNumber.zeroBasedInt());
+            m_sheet->contents()->parseStringAtLine(text, startLineNumber.zeroBasedInt(), m_createdByParser);
 
             m_loading = false;
         }
